Error popups spawned from new FileBrowser are "swallowed" (e.g. Addon import/export errors) #69581

Closed
opened 2019-09-06 11:41:53 +02:00 by Philipp Oeser · 10 comments
Member

System Information
Operating system: Linux-5.2.8-200.fc30.x86_64-x86_64-with-fedora-30-Thirty 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26

Blender Version
Broken: version: 2.81 (sub 8), d813cc706d
Worked: version: 2.81 (sub 8), 6fc6f2504d

Short description of error
Error popups spawned from new FileBrowser are "swallowed" (e.g. Addon import/export errors) and cannot be seen in the UI anymore.
They are still thrown to the console, but users will be unaware of these errors which will make bugreports a pain and is generally a bad user experience.

Exact steps for others to reproduce the error



diff --git a/io_scene_obj/__init__.py b/io_scene_obj/__init__.py
index bddf758b..434a0cc9 100644
--- a/io_scene_obj/__init__.py
+++ b/io_scene_obj/__init__.py
@@ -446,7 +446,7 @@ class ExportOBJ(bpy.types.Operator, ExportHelper):
     def execute(self, context):
         from . import export_obj
 
-        from mathutils import Matrix
+        from mathutils import DecentralizedCommunication
         keywords = self.as_keywords(ignore=("axis_forward",
                                             "axis_up",
                                             "global_scale",
  • with the above, from the default scene, do File > Export > Wavefront (.obj)
  • you should get an error, but... nothing
  • error is still thrown to the console, but we need this in the UI as well!
Traceback (most recent call last):
File "/build_linux/bin/2.81/scripts/addons/io_scene_obj/__init__.py", line 449, in execute
    from mathutils import DecentralizedCommunication
ImportError: cannot import name 'DecentralizedCommunication' from 'mathutils' (unknown location)

Not quite sure why d813cc706d broke this, needs more checking...

**System Information** Operating system: Linux-5.2.8-200.fc30.x86_64-x86_64-with-fedora-30-Thirty 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26 **Blender Version** Broken: version: 2.81 (sub 8), d813cc706d Worked: version: 2.81 (sub 8), 6fc6f2504d **Short description of error** Error popups spawned from new FileBrowser are "swallowed" (e.g. Addon import/export errors) and cannot be seen in the UI anymore. They are still thrown to the console, but users will be unaware of these errors which will make bugreports a pain and is generally a bad user experience. **Exact steps for others to reproduce the error** - force an error in an Addon, e.g. by doing [P1094: ForceAddonError](https://archive.blender.org/developer/P1094.txt) ``` diff --git a/io_scene_obj/__init__.py b/io_scene_obj/__init__.py index bddf758b..434a0cc9 100644 --- a/io_scene_obj/__init__.py +++ b/io_scene_obj/__init__.py @@ -446,7 +446,7 @@ class ExportOBJ(bpy.types.Operator, ExportHelper): def execute(self, context): from . import export_obj - from mathutils import Matrix + from mathutils import DecentralizedCommunication keywords = self.as_keywords(ignore=("axis_forward", "axis_up", "global_scale", ``` - with the above, from the default scene, do `File` > `Export` > `Wavefront (.obj)` - you should get an error, but... nothing - error is still thrown to the console, but we need this in the UI as well! ``` Traceback (most recent call last): File "/build_linux/bin/2.81/scripts/addons/io_scene_obj/__init__.py", line 449, in execute from mathutils import DecentralizedCommunication ImportError: cannot import name 'DecentralizedCommunication' from 'mathutils' (unknown location) ``` Not quite sure why d813cc706d broke this, needs more checking...
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Author
Member

Added subscribers: @WilliamReynish, @JulianEisel

Added subscribers: @WilliamReynish, @JulianEisel
Author
Member

I dare setting this to High...

CC @WilliamReynish
CC @JulianEisel

I dare setting this to High... CC @WilliamReynish CC @JulianEisel

This issue was referenced by 4c20c53b89

This issue was referenced by 4c20c53b8980535fd0d62a5285a1e27bbe6e829d
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Julian Eisel self-assigned this 2019-09-06 12:51:35 +02:00
Author
Member

Since 4c20c53b89 (thx @JulianEisel! ) only partially fixes, will reopen...

Since 4c20c53b89 (thx @JulianEisel! ) only **partially** fixes, will reopen...
Author
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Member

Setting to medium though since the error is reported clearly now, it's just missing the additional popup report.
Got an appointment now, will check as soon as I'm back.

Setting to medium though since the error is reported clearly now, it's just missing the additional popup report. Got an appointment now, will check as soon as I'm back.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Committed second part 83a7d98a32. Should be all fine now.

Committed second part 83a7d98a32. Should be all fine now.
Thomas Dinges added this to the 2.81 milestone 2023-02-08 16:46:59 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69581
No description provided.